--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <title>Frontend Mentor | Social links profile</title>
 
     <link rel="stylesheet" href="./css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -28,8 +35,9 @@
         <div class="social-user-details">
           <h1 class="user-name">Jessica Randall</h1>
           <p class="user-location">London, United Kingdom</p>
-          <p class="user-coute">"Front-end developer and avid reader."</p>
         </div>
+
+        <p class="user-coute">"Front-end developer and avid reader."</p>
 
         <ul class="social-links">
           <li>GitHub</li>
