--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
   <body>
     <main>
       <article class="social-card-container">
-        <img
-          src="./assets/images/avatar-jessica.jpeg"
-          alt="User Profile Image"
-          class="social-profile-img"
-        />
+        <div class="social-profile-container">
+          <img
+            src="./assets/images/avatar-jessica.jpeg"
+            alt="User Profile Image"
+            class="social-profile-img"
+          />
+        </div>
 
         <div class="social-user-details">
           <h1 class="user-name">Jessica Randall</h1>
