Add user bio and user links styles

--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
           <p class="user-location">London, United Kingdom</p>
         </div>
 
-        <p class="user-coute">"Front-end developer and avid reader."</p>
+        <p class="user-bio">"Front-end developer and avid reader."</p>
 
         <ul class="social-links">
           <li>GitHub</li>
-          <li>Frontend</li>
-          <li>Mentor</li>
+          <li>Frontend Mentor</li>
           <li>LinkedIn</li>
           <li>Twitter</li>
           <li>Instagram</li>
