--- a/index.html
+++ b/index.html
@@ -42,11 +42,31 @@
         <p class="user-bio">"Front-end developer and avid reader."</p>
 
         <ul class="social-links">
-          <li>GitHub</li>
-          <li>Frontend Mentor</li>
-          <li>LinkedIn</li>
-          <li>Twitter</li>
-          <li>Instagram</li>
+          <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+          <li>
+            <a href="https://www.frontendmentor.io/home" target="_blank"
+              >Frontend Mentor</a
+            >
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+          </li>
+          <li><a href="https://x.com/" target="_blank">Twitter</a></li>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+          </li>
+          <!-- <a href="https://github.com/" target="_blank"><li>GitHub</li></a>
+          <a href="https://www.frontendmentor.io/home" target="_blank"
+            ><li>Frontend Mentor</li></a
+          >
+          <a href="https://www.linkedin.com/" target="_blank"
+            ><li>LinkedIn</li></a
+          >
+          <a href="https://x.com/" target="_blank"><li>Twitter</li></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><li>Instagram</li></a
+          >
+           -->
         </ul>
       </article>
     </main>
