Add descriptive text for screen readers

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
         <p class="user-bio">"Front-end developer and avid reader."</p>
 
         <ul class="social-links">
-          <li><a href="https://github.com/" target="_blank">GitHub</a></li>
+          <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub <span class="sr-only">(opens in a new tab)</a></li>
           <li>
-            <a href="https://www.frontendmentor.io/home" target="_blank"
-              >Frontend Mentor</a
+            <a href="https://www.frontendmentor.io/home" target="_blank" rel="noopener noreferrer"
+              >Frontend Mentor <span class="sr-only">(opens in a new tab)</a
             >
           </li>
           <li>
-            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">LinkedIn <span class="sr-only">(opens in a new tab)</a>
           </li>
-          <li><a href="https://x.com/" target="_blank">Twitter</a></li>
+          <li><a href="https://x.com/" target="_blank" rel="noopener noreferrer">Twitter <span class="sr-only">(opens in a new tab)</a></li>
           <li>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">Instagram <span class="sr-only">(opens in a new tab)</a>
           </li>
         </ul>
       </article>
