fix: Include figure and blockquote tags

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
   <body>
     <main>
       <article class="social-card-container">
-        <div class="social-profile-container">
+        <figure class="social-profile-container">
           <img
             src="./assets/images/avatar-jessica.jpeg"
             alt="User Profile Image"
             class="social-profile-img"
           />
-        </div>
+        </figure>
 
         <div class="social-user-details">
           <h1 class="user-name">Jessica Randall</h1>
           <p class="user-location">London, United Kingdom</p>
         </div>
 
-        <p class="user-bio">"Front-end developer and avid reader."</p>
+        <blockquote class="user-bio">"Front-end developer and avid reader."</blockquote>
 
         <ul class="social-links">
           <li><a href="https://github.com/" target="_blank" rel="noopener noreferrer">GitHub <span class="sr-only">(opens in a new tab)</a></li>
